--- a/index.html
+++ b/index.html
@@ -24,6 +24,14 @@
         <ul>
         <p><li><a class="ajuste" href="nos.html">Quem somos <a class="ajuster" href="organograma.html">Organograma</a> </a></li></p>
         </ul>
+
+        <p class="home">Este é o nosso trabalho para a Porto Seguro, com o intuito de uma vistoria e seguros de bicicleta de uma forma rápida e fácil. Nossa proposta é uma automação de serviços utilizando a indústria 4.0 , linguagens de programação, chatbots e uma inteligência artificial para melhor experiência com o cliente. 
+            Chatbots com inteligência artificial: nós  desenvolvemos chatbots capazes de atender aos clientes de forma mais rápida e eficiente, utilizando inteligência artificial para entender as necessidades dos usuários e fornecer respostas precisas. 
+            Monitoramento e análise de dados: Com a indústria 4.0, é possível coletar uma grande quantidade de dados sobre os processos internos da Porto Seguro. Utilizando linguagens de programação e ferramentas de análise de dados, é possível monitorar o desempenho dos equipamentos e a eficiência dos processos, identificando oportunidades de melhoria e otimização.
+            Otimização de processos: A inteligência artificial pode ser utilizada para analisar os dados coletados e identificar gargalos nos processos de vistorias de bicicletas. Com base nessa análise, é possível otimizar os processos, reduzindo o tempo de produção e os custos.
+            Gestão integrada: Utilizando sistemas de gestão integrada, é possível monitorar e controlar todos os processos da Porto Seguro de forma centralizada, garantindo mais eficiência e segurança. Além disso, esses sistemas permitem a análise de dados em tempo real, o que facilita a tomada de decisões e a identificação de oportunidades de melhoria.
+            Em resumo, a combinação da indústria 4.0, linguagens de programação, chatbots e inteligência artificial pode trazer diversos benefícios para o nosso projeto com a  Porto Seguro, desde a melhoria do atendimento ao cliente até a otimização de processos internos. Com a utilização dessas tecnologias, a empresa pode se tornar mais competitiva e eficiente, garantindo uma experiência ainda melhor para seus clientes.
+            </p>
         
         
     </nav>
